# mmaclone

./: .gitignore  Attribute.hs  DataType.hs  Environment.hs  Eval.hs  EvalSpec.hs  Hier.hs  HierSpec.hs  NewParse.hs  NewParseSpec.hs  Number.hs  NumberSpec.hs  ParseSpec.hs  ParseSpecTemp.hs  Part.hs  Pattern.hs  PatternSpec.hs  Pretty.hs  Primitives.hs  README.md  Trans.hs  TransSpec.hs  demoScript.txt  issue.txt  main.hs  parse.hs  test.hs
mmaclone/: LICENSE  mmaclone.cabal  stack.yaml
mmaclone/.stack-work/install/37799dd0/flag-cache/: mmaclone-0.1.0.0-8180d2391c078817e54481e480bde4ac
mmaclone/.stack-work/install/37799dd0/lib/x86_64-windows-ghc-7.10.2/mmaclone-0.1.0.0-BpZFqKnwszLJwripr2J3v7/: Lib.hi
mmaclone/app/: Main.hs
mmaclone/src/: Test.hs
mmaclone/src/Data/: Attribute.hs  DataType.hs
mmaclone/src/Data/Environment/: Environment.hs  EnvironmentType.hs  Update.hs
mmaclone/src/Data/Number/: Hier.hs  Number.hs
mmaclone/src/Eval/: Environment.hs  Eval.hs  EvalHead.hs  Lambda.hs
mmaclone/src/Eval/Patt/: Pattern.hs  PatternPrimi.hs  Regengine.hs
mmaclone/src/Eval/Primitive/: Part.hs  PrimiFunc.hs  PrimiType.hs  Primitives.hs
mmaclone/src/Eval/Primitive/Arithmatic/: Arithmatic.hs
mmaclone/src/Eval/Primitive/Compare/: Compare.hs
mmaclone/src/Eval/Primitive/Control/: Branch.hs
mmaclone/src/Eval/Primitive/EvalPrimi/: EvalPrimi.hs
mmaclone/src/Eval/Primitive/EvalPrimi/Logic/: AndOr.hs
mmaclone/src/Eval/Primitive/Function/: Lambda.hs
mmaclone/src/Eval/Primitive/IO/: Print.hs
mmaclone/src/Eval/Primitive/IOPrimi/: IOPrimi.hs
mmaclone/src/Eval/Primitive/IOPrimi/IO/: Print.hs
mmaclone/src/Eval/Primitive/IOPrimi/InOut/: InOut.hs
mmaclone/src/Eval/Primitive/IOPrimi/Set/: Set.hs
mmaclone/src/Eval/Primitive/InOut/: InOut.hs
mmaclone/src/Eval/Primitive/List/: Cons.hs  Elem.hs  Level.hs  List.hs  Map.hs  Part.hs
mmaclone/src/Eval/Primitive/Logic/: AndOr.hs  Logic.hs
mmaclone/src/Eval/Primitive/Nest/: Nest.hs
mmaclone/src/Eval/Primitive/Primi/: Primi.hs
mmaclone/src/Eval/Primitive/Primi/Arithmatic/: Arithmatic.hs
mmaclone/src/Eval/Primitive/Primi/Compare/: Compare.hs
mmaclone/src/Eval/Primitive/Primi/Function/: Lambda.hs
mmaclone/src/Eval/Primitive/Primi/List/: Cons.hs  Elem.hs  Level.hs  List.hs  Map.hs  Part.hs
mmaclone/src/Eval/Primitive/Primi/Logic/: Logic.hs  Not.hs
mmaclone/src/Eval/Primitive/Primi/Replace/: Replace.hs  Unpack.hs
mmaclone/src/Eval/Primitive/Replace/: Replace.hs  ReplaceRepeated.hs  Unpack.hs
mmaclone/src/Eval/Primitive/Set/: Set.hs
mmaclone/src/Parser/: NewParse.hs  Trans.hs
mmaclone/src/Show/: Pretty.hs
mmaclone/test/Data/Number/: HierSpec.hs  NumberSpec.hs
mmaclone/test/Eval/: EvalSpec.hs
mmaclone/test/Eval/Patt/: PatternSpec.hs
mmaclone/test/Parser/: NewParseSpec.hs  TransSpec.hs
