name:                mmaclone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/mmaclone#readme
license:             BSD3
license-file:        LICENSE
author:              Y. Jin
maintainer:          jyh1@mail.ustc.edu.cn
copyright:           2016 Y. Jin
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test
                      , Parser.Trans
                      , Parser.NewParse
                      , Eval.Eval
                      , Eval.EvalHead
                      , Data.DataType
                      , Data.Number.Number
                      , Data.Number.Hier
                      , Data.Environment.Environment
                      , Data.Attribute
                      , Eval.Environment
                      , Eval.Patt.Pattern
                      , Eval.Primitive.PrimiType
                      , Eval.Primitive.Primitives
                      , Eval.Primitive.Primi.Primi
                      , Eval.Primitive.Primi.Arithmatic.Arithmatic
                      , Eval.Primitive.Primi.Compare.Compare
                      , Eval.Primitive.Primi.List.List
                      , Eval.Primitive.Primi.List.Elem
                      , Eval.Primitive.Primi.List.Part
                      , Eval.Primitive.Primi.List.Cons
                      , Eval.Primitive.Primi.List.Map
                      , Eval.Primitive.Primi.List.Level
                      , Eval.Primitive.Primi.Control.Branch
                      , Eval.Primitive.Primi.Logic.Logic
                      , Eval.Primitive.Primi.Function.Lambda
                      , Eval.Primitive.Primi.Replace.Replace
                      , Eval.Primitive.Primi.Replace.Unpack

                      , Eval.Primitive.IOPrimi.IOPrimi
                      , Eval.Primitive.IOPrimi.Set.Set
                      , Eval.Primitive.IOPrimi.IO.Print

                      , Show.Pretty
  build-depends:       base >= 4.7 && < 5
                      , mtl
                      , containers
                      , transformers
                      , parsec
                      , lens
                      , hspec
                      , QuickCheck
  default-language:    Haskell2010

executable mmaclone-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , mtl
                     , mmaclone
  default-language:    Haskell2010

test-suite mmaclone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mmaclone
                     , hspec
                     , QuickCheck
                     , mtl
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jyh1/mmaclone
