name:                mmaclone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/mmaclone#readme
license:             BSD3
license-file:        LICENSE
author:              Yonghao Jin
maintainer:          jyh1@mail.ustc.edu.cn
copyright:           2016 Y. Jin
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      Test
                      , Parser.Trans
                      , Parser.NewParse
                      , Eval.Eval
                      , Eval.EvalHead
                      , Data.DataType
                      , Data.Number.Number
                      , Data.Environment.Environment
                      , Data.Environment.EnvironmentType
                      , Data.Environment.Update
                      , Data.Attribute
                      , Eval.Patt.Pattern
                      , Eval.Patt.PatternPrimi
                      , Eval.Patt.Regengine
                      -- , Eval.Primitive.PrimiType
                      , Eval.Primitive.Primitives
                      , Eval.Primitive.PrimiFunc
                      , Eval.Primitive.Arithmatic.Arithmatic
                      , Eval.Primitive.Compare.Compare
                      , Eval.Primitive.List.List
                      , Eval.Primitive.List.Elem
                      , Eval.Primitive.List.Part
                      , Eval.Primitive.List.Cons
                      , Eval.Primitive.List.Map
                      , Eval.Primitive.List.Level
                      , Eval.Primitive.Control.Branch
                      , Eval.Primitive.Logic.Logic
                      , Eval.Primitive.Function.Lambda
                      , Eval.Primitive.Replace.Replace
                      , Eval.Primitive.Replace.Unpack
                      , Eval.Primitive.Nest.Nest
                      , Eval.Primitive.Set.Set
                      , Eval.Primitive.IO.Print
                      , Eval.Primitive.InOut.InOut

                      , Show.Pretty
  build-depends:       base >= 4.7 && < 5
                      , mtl
                      , containers
                      , transformers
                      , parsec
                      , lens
                      , hspec
                      , QuickCheck
                      , text
  default-language:    Haskell2010
  extensions: OverloadedStrings

executable mmaclone-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , mtl
                     , transformers
                     , mmaclone
                     , lens
                     , text
                     , haskeline
  default-language:    Haskell2010

test-suite mmaclone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mmaclone
                     , hspec
                     , QuickCheck
                     , mtl
                     , parsec
                     , transformers
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions: OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/jyh1/mmaclone
